# Mindlite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  USER_MANUAL.md  mindlite-cli  mindlite-export.json  mindlite-export.md  mindlite_standalone.py  pyproject.toml  run_tests.py  setup.py  test-export.md
matrix_mind/: __init__.py  cli.py  db.py  export.py  models.py  seed.py
matrix_mind/tui/: __init__.py  app.py  screens.py
matrix_mind/tui/themes/: matrix.tcss
matrix_mind/tui/widgets/: __init__.py  board_view.py  detail_panel.py  footer.py  header.py  list_view.py  matrix_rain.py  sidebar.py
mindlite/: README.md  __init__.py  __main__.py  cli.py  db.py  export.py  models.py  tui.py  utils.py
tests/: test_cli.py  test_db.py  test_mindlite.py  test_mindlite_cli.py
